[linkit7688/client.py] initial network connection [server/server.py] initial network connection [config.ini] configure file setting (network host and port) [test_config.py] example code of reading config.ini

--- a/開發流程.md
+++ b/開發流程.md
@@ -1,11 +1,12 @@
 ## To do list
 
 - [x] Linkit 7688 連線
-- [ ] scp 環境設定
-- [ ] github repo
-- [ ] hello python
-- [ ] GPIO 連線 RF433
+- [x] scp 環境設定
+- [x] github repo
+- [x] hello python
 - [ ] python 連線至電腦 (client,server)
+- [ ] RF433 rssi getting
+- [ ] GPIO 連線 RF433
 
 ## Linkit 7688 連線流程 [Ref](http://www.tyes.tc.edu.tw/share/105learn/LinkIt7688.pdf)
 
@@ -29,7 +30,13 @@ change sfcp to scp login
 1. github account/password: dengkaiChang/Bean0713
    repo name: trajectory_desing_7688 [project_link](https://github.com/dengkaichang/trajectory_design_7688.git)
 2. download [tortoisegit](https://tortoisegit.org/download/), [git](https://gitforwindows.org/)
-3. 
+
+## python client/server  [Ref](https://shazi.info/python2-%E7%94%A8-socket-%E5%BB%BA%E7%AB%8B-tcp-server-client-%E7%AD%86%E8%A8%98/)
+
+​	version: 2.7.9
+	setting from config.ini (see other/test_config.py)
+
+
 
 
 
