[other/test_bridge.py] bridge between arduino-RF-433rx and py [other/test_gpio.py] example code of get gpio

--- a/開發流程.md
+++ b/開發流程.md
@@ -1,10 +1,10 @@
-## To do list
+## sTo do list
 
 - [x] Linkit 7688 連線
 - [x] scp 環境設定
 - [x] github repo
 - [x] hello python
-- [ ] python 連線至電腦 (client,server)
+- [x] python 連線至電腦 (client,server)
 - [ ] RF433 rssi getting
 - [ ] GPIO 連線 RF433
 
@@ -34,9 +34,45 @@ change sfcp to scp login
 ## python client/server  [Ref](https://shazi.info/python2-%E7%94%A8-socket-%E5%BB%BA%E7%AB%8B-tcp-server-client-%E7%AD%86%E8%A8%98/)
 
 ​	version: 2.7.9
-	setting from config.ini (see other/test_config.py)
+​	setting from config.ini (see other/test_config.py)
+
+## RF433 GPIO connection
+
+ * testing LED [Ref](https://makerpro.cc/2016/04/how-to-control-7688-gpio-without-libmraa/)
+   GPIO的進入點在OpenWRT中的 /sys/class/gpio 目錄下對應，所以切入 /sys/class/gpio 目錄後，就可以看到
+
+ * set GPIO 43
+ ```bash
+cd /sys/class/gpio/
+echo 43 > export
+ ```
+
+* test GPIO43 output code
+
+```python
+import mraa
+import time
+ 
+WAY = mraa.Gpio(43)	#GPIO43 on 7688
+WAY.dir(mraa.DIR_OUT)
+```
+
+因為太難用惹 所以改 arduino + bridge.h
+
+```c
+#include <Bridge.h>
+Bridge.begin();
+Bridge.put("key", "value");
+```
+
+ * 
+
+ * ![gpio43 的控制點](http://makerpro.cc/wp-content/uploads/2016/03/06-2.jpg)
+
+* **7688 pin 腳對應** 
 
 
+* ![「linkit smart 7688 duo datasheet」的圖片搜尋結果](https://camo.githubusercontent.com/8a088f2f216a52ff6e830ba5cbf2d76ca7791934/687474703a2f2f7777772e636e782d736f6674776172652e636f6d2f77702d636f6e74656e742f75706c6f6164732f323031352f31322f4c696e6b5f536d6172745f373638385f44554f5f50696e6f75742e706e67)
 
 
 
