--- a/開發流程.md
+++ b/開發流程.md
@@ -25,18 +25,18 @@
 
 change sfcp to scp login
 
-## git install and github
+## Git install and github
 
-1. github account/password: dengkaiChang/Bean0713
+1. github [account/password](dengkaiChang/Bean0713)
    repo name: trajectory_desing_7688 [project_link](https://github.com/dengkaichang/trajectory_design_7688.git)
 2. download [tortoisegit](https://tortoisegit.org/download/), [git](https://gitforwindows.org/)
 
-## python client/server  [Ref](https://shazi.info/python2-%E7%94%A8-socket-%E5%BB%BA%E7%AB%8B-tcp-server-client-%E7%AD%86%E8%A8%98/)
+## Python client/server  [Ref](https://shazi.info/python2-%E7%94%A8-socket-%E5%BB%BA%E7%AB%8B-tcp-server-client-%E7%AD%86%E8%A8%98/)
 
 ​	version: 2.7.9
 ​	setting from config.ini (see other/test_config.py)
 
-## RF433 GPIO connection
+## RF-433 GPIO connection
 
  * testing LED [Ref](https://makerpro.cc/2016/04/how-to-control-7688-gpio-without-libmraa/)
    GPIO的進入點在OpenWRT中的 /sys/class/gpio 目錄下對應，所以切入 /sys/class/gpio 目錄後，就可以看到
@@ -57,7 +57,10 @@ WAY = mraa.Gpio(43)	#GPIO43 on 7688
 WAY.dir(mraa.DIR_OUT)
 ```
 
-因為太難用惹 所以改 arduino + bridge.h
+因為太難用，所以改 arduino + bridge.h
+
+* key: 把value用key做表示，於py找尋
+* value: RF-433 buffer所收到的HEX，並強制轉型成[char]((char*)(buf))
 
 ```c
 #include <Bridge.h>
