--- a/開發流程.md
+++ b/開發流程.md
@@ -31,10 +31,15 @@ change sfcp to scp login
    repo name: trajectory_desing_7688 [project_link](https://github.com/dengkaichang/trajectory_design_7688.git)
 2. download [tortoisegit](https://tortoisegit.org/download/), [git](https://gitforwindows.org/)
 
-## Python client/server  [Ref](https://shazi.info/python2-%E7%94%A8-socket-%E5%BB%BA%E7%AB%8B-tcp-server-client-%E7%AD%86%E8%A8%98/)
+## Python client/server  [Ref1](https://shazi.info/python2-%E7%94%A8-socket-%E5%BB%BA%E7%AB%8B-tcp-server-client-%E7%AD%86%E8%A8%98/)  [Ref2](https://www.journaldev.com/15906/python-socket-programming-server-client#python-socket-programming-output) [Ref3](https://blog.gtwang.org/programming/python-threading-multithreaded-programming-tutorial/)
 
 ​	version: 2.7.9
 ​	setting from config.ini (see other/test_config.py)
+
+​	Step1: 建立好 socket ，並使用 bridge 將數值連接上
+​	Step2: 利用 python thread 多個執行續
+​	Step3: 將原數值存入 h0 並重複覆蓋
+​	Step4: 最後將第二個執行續之數值傳回給 server 
 
 ## RF-433 GPIO connection
 
