[開發流程.md] update the server/client

--- a/開發流程.md
+++ b/開發流程.md
@@ -36,10 +36,10 @@ change sfcp to scp login
 ​	version: 2.7.9
 ​	setting from config.ini (see other/test_config.py)
 
-​	Step1: 建立好 socket ，並使用 bridge 將數值連接上
-​	Step2: 利用 python thread 多個執行續
-​	Step3: 將原數值存入 h0 並重複覆蓋
-​	Step4: 最後將第二個執行續之數值傳回給 server 
+ 	1.  建立好 socket ，並使用 bridge 將數值連接上
+ 	2.  利用 python thread 多個執行續
+ 	3.  將原數值存入 h0 並重複覆蓋
+ 	4.  最後將第二個執行續之數值傳回給 server
 
 ## RF-433 GPIO connection
 
